starter page css complete

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="w-full p-t-100 p-b-90 p-l-48 p-l-0-md">
 
 				<h3 class="l1-txt1 p-b-34 respon3">
-					<span style="color: #CE9911">Coiny</span><span style="color: #f8ca01">Day</span>
+					<span style="color: #fff">Coiny</span><span style="color: #f8ca01">Day</span>
 				</h3>
 
 				<p class="m2-txt1 p-b-46">
