Changed index, working on firebase integration for email

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>CoinyDay!</title>
+	<title>CoinyDay - Invest, Explore, and Grow!</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -29,18 +29,18 @@
 		<div class="flex-w flex-col-sb wsize1 bg0 p-l-70 p-t-37 p-b-52 p-r-50 respon1">
 			<div class="wrappic1">
 				<a href="#">
-					<img src="images/icons/logo.png" width="150" alt="logo">
+					<img class="animated rubberband" src="images/icons/logo.png" width="150" alt="logo">
 				</a>
 			</div>
 
 			<div class="w-full p-t-100 p-b-90 p-l-48 p-l-0-md">
 
 				<h3 class="l1-txt1 p-b-34 respon3">
-					<span style="color: #fff">Coiny</span><span style="color: #f8ca01">Day</span>
+					<span style="color: #fff">Invest your spare change </span><span style="color: #f8ca01">in the future</span>
 				</h3>
 
 				<p class="m2-txt1 p-b-46">
-					Invest in your future with the future!
+					Anyone can do it.
 				</p>
 
 				<form class="contact100-form validate-form m-t-10 m-b-10">
