--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>CoinyDay - Invest, Explore, and Grow!</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
+
 <body>
 
 
@@ -44,10 +46,10 @@
 				</p>
 
 				<form class="contact100-form validate-form m-t-10 m-b-10">
-					<div class="wrap-input100 validate-input m-lr-auto-lg" data-validate = "Email is required: ex@abc.xyz">
-						<input class="s2-txt1 placeholder0 input100 trans-04" type="text" name="email" placeholder="Email Address">
+					<div class="wrap-input100 validate-input m-lr-auto-lg" data-validate="Email is required: ex@abc.xyz">
+						<input id="email-input" class="s2-txt1 placeholder0 input100 trans-04" type="text" name="email" placeholder="Email Address">
 
-						<button class="flex-c-m ab-t-r size2 hov1 respon5">
+						<button type=button id="email-submit" class="flex-c-m ab-t-r size2 hov1 respon5">
 							<i class="zmdi zmdi-long-arrow-right fs-30 cl1 trans-04"></i>
 						</button>
 
@@ -86,18 +88,41 @@
 
 
 
+	<!-- Firebase App is always required and must be first -->
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
 
-<!--===============================================================================================-->
+	<!-- Add additional services that you want to use -->
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-messaging.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-functions.js"></script>
+
+	<script>
+		// Initialize Firebase
+		var config = {
+			apiKey: "AIzaSyAJa_Ft74zladJ-EZp5Es0VhMJ1-HArkac",
+			authDomain: "coinyday.firebaseapp.com",
+			databaseURL: "https://coinyday.firebaseio.com",
+			projectId: "coinyday",
+			storageBucket: "coinyday.appspot.com",
+			messagingSenderId: "84358601112"
+		};
+		firebase.initializeApp(config);
+	</script>
+	<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
+	<script src="js/source.js"></script>
 
 </body>
+
 </html>
