--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
 	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 	<script src="js/source.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128564551-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128564551-2');
+</script>
 
 </body>
 
